--- a/src/main/resources/fxml/globalPreferences.fxml
+++ b/src/main/resources/fxml/globalPreferences.fxml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="anchor-section" stylesheets="@../css/harmony.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.harmony.engine.utils.GlobalPrefController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="anchor-section" stylesheets="@../css/harmony.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.harmony.engine.utils.GlobalPrefController">
    <children>
       <ScrollPane fx:id="scrollPane" prefHeight="600.0" prefWidth="800.0" style="-fx-background: transparent;">
          <content>
@@ -18,6 +26,7 @@
                      <ColumnConstraints />
                  </columnConstraints>
                  <rowConstraints>
+                     <RowConstraints />
                      <RowConstraints maxHeight="65.0" minHeight="65.0" prefHeight="65.0" vgrow="NEVER" />
                      <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                      <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
@@ -30,43 +39,55 @@
                      <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                      <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                      <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
-                     <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+                  <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                  </rowConstraints>
                <children>
-                  <Label style="-fx-font-size: 30px; -fx-font-family: sans-serif;" styleClass="default-label" text="General" />
-                     <Label styleClass="default-label" text="Theme:" GridPane.rowIndex="1">
+                  <Label style="-fx-font-size: 30px; -fx-font-family: sans-serif;" styleClass="default-label" text="General" GridPane.rowIndex="1" />
+                     <Label styleClass="default-label" text="Theme:" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin></Label>
-                     <ComboBox fx:id="theme" prefHeight="27.0" prefWidth="150.0" styleClass="default-combo-box" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                     <Label styleClass="default-label" text="Auto-Save:" GridPane.rowIndex="2">
+                     <ComboBox fx:id="theme" prefHeight="27.0" prefWidth="150.0" styleClass="default-combo-box" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                     <Label styleClass="default-label" text="Auto-Save:" GridPane.rowIndex="3">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin></Label>
-                     <CheckBox fx:id="autoSave" mnemonicParsing="false" prefHeight="18.0" prefWidth="19.0" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                     <CheckBox fx:id="autoSave" mnemonicParsing="false" prefHeight="18.0" prefWidth="19.0" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="3" />
       
-                        <Label style="-fx-font-size: 30px; -fx-font-family: sans-serif;" styleClass="default-label" text="Editor" GridPane.rowIndex="3" />
-                  <Label styleClass="default-label" text="Draw From Top:" GridPane.rowIndex="4">
+                        <Label style="-fx-font-size: 30px; -fx-font-family: sans-serif;" styleClass="default-label" text="Editor" GridPane.rowIndex="4" />
+                  <Label styleClass="default-label" text="Draw From Top:" GridPane.rowIndex="5">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin></Label>
-                  <CheckBox fx:id="editorDrawFromTop" mnemonicParsing="false" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                     <Label styleClass="default-label" text="Pan Multiplier:" GridPane.rowIndex="5">
+                  <CheckBox fx:id="editorDrawFromTop" mnemonicParsing="false" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                     <Label styleClass="default-label" text="Pan Multiplier:" GridPane.rowIndex="6">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin></Label>
-                     <TextField fx:id="panMultiplier" prefHeight="27.0" prefWidth="57.0" promptText="1.0" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                  <Label styleClass="default-label" text="Editor Background Color:" GridPane.rowIndex="6">
+                     <TextField fx:id="panMultiplier" prefHeight="27.0" prefWidth="57.0" promptText="1.0" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                  <Label styleClass="default-label" text="Editor Background Color:" GridPane.rowIndex="8">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin></Label>
-                  <TextField fx:id="editorBGColor" prefHeight="27.0" prefWidth="63.0" promptText="35406c" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                  <Label styleClass="default-label" text="Outline Color:" GridPane.rowIndex="7">
+                  <TextField fx:id="editorBGColor" prefHeight="27.0" prefWidth="63.0" promptText="35406c" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                  <Label styleClass="default-label" text="Outline Color:" GridPane.rowIndex="9">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin></Label>
-                  <TextField fx:id="editorOutlineColor" prefHeight="27.0" prefWidth="63.0" promptText="ff0000" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                  <Button fx:id="importTheme" mnemonicParsing="false" styleClass="default-button" text="Import Theme" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <TextField fx:id="editorOutlineColor" prefHeight="27.0" prefWidth="63.0" promptText="ff0000" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+                  <Button fx:id="importTheme" mnemonicParsing="false" styleClass="default-button" text="Import Theme" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <Label styleClass="default-label" text="Show Guide Lines:" GridPane.rowIndex="11">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <CheckBox fx:id="editorShowGuideLines" mnemonicParsing="false" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="11" />
+                  <Label prefHeight="21.0" prefWidth="195.0" styleClass="default-label" text="Guide Line Distance:" GridPane.rowIndex="12">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <TextField fx:id="editorGuideLineDist" prefHeight="27.0" prefWidth="57.0" promptText="10" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="12" />
                </children>
                <padding>
                   <Insets left="10.0" top="10.0" />
@@ -74,10 +95,10 @@
              </GridPane>
          </content>
       </ScrollPane>
-      <Button fx:id="documentationButton" mnemonicParsing="false" styleClass="default-button" text="Documentation" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="46.0" />
+      <Button fx:id="documentationButton" mnemonicParsing="false" styleClass="default-button" text="Documentation" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="46.0" />
        
-       <Button fx:id="applyButton" mnemonicParsing="false" styleClass="default-choose-button" text="Apply" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
-       <Button fx:id="cancelButton" mnemonicParsing="false" styleClass="default-button" text="Cancel" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="80.0" />
-      <Button fx:id="resetToDefaultsButton" mnemonicParsing="false" style="-fx-background-color: #f55442 #f55442;" styleClass="default-button" text="Reset To Defaults" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
+       <Button fx:id="applyButton" mnemonicParsing="false" styleClass="default-choose-button" text="Apply" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="25.0" />
+       <Button fx:id="cancelButton" mnemonicParsing="false" styleClass="default-button" text="Cancel" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="95.0" />
+      <Button fx:id="resetToDefaultsButton" mnemonicParsing="false" style="-fx-background-color: #f55442 #f55442;" styleClass="default-button" text="Reset To Defaults" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="10.0" />
    </children>
 </AnchorPane>
