--- a/src/main/resources/engine.fxml
+++ b/src/main/resources/engine.fxml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Group?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
@@ -14,7 +12,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.web.WebView?>
@@ -137,54 +134,33 @@
           </Tab>
           <Tab fx:id="gameObjectsTab" text="Game Objects">
               <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="anchor-section">
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: -fx-default-light;" styleClass="anchor-section">
                       <children>
-                          <SplitPane dividerPositions="0.33" prefHeight="200.0" prefWidth="200.0" style="-fx-color: -fx-default-dark; -fx-box-border: -fx-default-dark; -fx-background-color: -fx-default-light;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                              <items>
-                                  <AnchorPane>
-                                      <children>
-                                          <ListView id="gameObjectsList" fx:id="gameObjectsList" prefHeight="314.0" prefWidth="200.0" style="-fx-background-color: -fx-default-medium; -fx-font-family: sans-serif;" AnchorPane.bottomAnchor="27.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                          <HBox layoutY="313.0" prefHeight="27.0" prefWidth="193.0" style="-fx-background-color: -fx-default-medium;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                                              <children>
-                                                  <Button fx:id="newGameObjectButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #228B22; -fx-cursor: hand; -fx-font-family: sans-serif;" text="New" HBox.hgrow="ALWAYS" />
-                                                  <Button fx:id="deleteGameObjectButton" alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #f55442; -fx-cursor: hand; -fx-font-family: sans-serif;" text="Delete" HBox.hgrow="ALWAYS" />
-                                              </children>
-                                          </HBox>
-                                      </children>
-                                  </AnchorPane>
-                                  <AnchorPane fx:id="gameObjectsInteractables" prefHeight="200.0" prefWidth="402.0" style="-fx-background-color: -fx-default-light;">
-                                      <children>
-
-                                            <Group layoutX="34.0" layoutY="14.0" AnchorPane.leftAnchor="34.0" AnchorPane.topAnchor="14.0">
-                                               <children>
-                                                        <Label layoutY="3.0" styleClass="default-label" text="Name:" />
-                                                        <TextField fx:id="gameObjectNameField" layoutX="64.0" prefHeight="27.0" prefWidth="135.0" styleClass="default-text-field" />
-                                               </children>
-                                            </Group>
-                                    <Group layoutX="22.0" layoutY="51.0">
-                                       <children>
-      
-                                                  <Label layoutY="3.0" styleClass="default-label" text="Position:" />
-                                                  <TextField fx:id="gameObjectPosX" layoutX="77.0" prefHeight="27.0" prefWidth="70.0" promptText="posX" styleClass="default-text-field" />
-                                                  <TextField fx:id="gameObjectPosY" layoutX="161.0" prefHeight="27.0" prefWidth="70.0" promptText="posY" styleClass="default-text-field" />
-                                       </children>
-                                    </Group>
-
-                                            <Group layoutX="34.0" layoutY="50.0" AnchorPane.topAnchor="87.0">
-                                                <children>
-                                                      <Label layoutX="-12.0" layoutY="3.0" styleClass="default-label" text="Texture:" />
-                                                     <TextField fx:id="gameObjectTextureField" layoutX="64.0" prefHeight="27.0" prefWidth="190.0" styleClass="default-text-field" />
-                                                 </children>
-                                            </Group>
-
-                                          <Button fx:id="saveGameObjectButton" layoutX="329.0" layoutY="4.0" mnemonicParsing="false" style="-fx-background-color: #228B22; -fx-cursor: hand; -fx-font-family: sans-serif;" text="Save" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" HBox.hgrow="ALWAYS" />
-                                    <Button fx:id="chooseGameObjectTexture" layoutX="296.0" layoutY="87.0" mnemonicParsing="false" styleClass="default-button" text="Choose" AnchorPane.leftAnchor="296.0" AnchorPane.topAnchor="87.0" />
-                                      </children>
-                                  </AnchorPane>
-                              </items>
-                          </SplitPane>
-                      </children>
-                  </AnchorPane>
+                            <ScrollPane fx:id="objectsScrollPane" fitToWidth="true" hbarPolicy="NEVER" pannable="true" prefHeight="255.0" prefWidth="410.0" AnchorPane.bottomAnchor="-0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <content>
+                                    <AnchorPane>
+                                        <children>
+                                            <GridPane fx:id="objectsArray" prefWidth="796.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="35.0">
+                                                <columnConstraints>
+                                                    <ColumnConstraints hgrow="ALWAYS" minWidth="100.0" prefWidth="100.0" />
+                                                    <ColumnConstraints hgrow="ALWAYS" minWidth="100.0" prefWidth="100.0" />
+                                                    <ColumnConstraints hgrow="ALWAYS" minWidth="100.0" prefWidth="100.0" />
+                                                    <ColumnConstraints hgrow="ALWAYS" minWidth="100.0" prefWidth="100.0" />
+                                                </columnConstraints>
+                                                <rowConstraints>
+                                                    <RowConstraints minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
+                                                    <RowConstraints minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
+                                                    <RowConstraints minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
+                                                </rowConstraints>
+                                            </GridPane>
+                                            <Button fx:id="newObjectButton" layoutX="14.0" mnemonicParsing="false" style="-fx-background-color: green;" styleClass="default-button" text="New" AnchorPane.leftAnchor="3.0" AnchorPane.topAnchor="3.0" />
+                                    <Button fx:id="openObjectButton" defaultButton="true" disable="true" layoutX="13.0" layoutY="13.0" mnemonicParsing="false" styleClass="default-choose-button" text="Open" textAlignment="CENTER" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="3.0" />
+                                            <TextField fx:id="objectsSearch" layoutX="615.0" layoutY="3.0" promptText="Search..." styleClass="default-text-field" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="3.0" />
+                                        </children>
+                                    </AnchorPane>
+                           </content>
+                            </ScrollPane>
+                      </children></AnchorPane>
               </content>
           </Tab>
           <Tab fx:id="editorTab" text="Editor">
