--- a/src/main/resources/fxml/globalPreferences.fxml
+++ b/src/main/resources/fxml/globalPreferences.fxml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="anchor-section" stylesheets="@../css/harmony.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.harmony.engine.utils.GlobalPrefController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="anchor-section" stylesheets="@../css/harmony.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.harmony.engine.utils.GlobalPrefController">
    <children>
       <ScrollPane fx:id="scrollPane" prefHeight="600.0" prefWidth="800.0" style="-fx-background: transparent;">
          <content>
@@ -22,6 +30,7 @@
                      <RowConstraints maxHeight="65.0" minHeight="65.0" prefHeight="65.0" vgrow="NEVER" />
                      <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                      <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+                     <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                      <RowConstraints maxHeight="65.0" minHeight="65.0" prefHeight="65.0" vgrow="NEVER" />
                      <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                      <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
@@ -30,7 +39,7 @@
                      <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                      <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                      <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
-                     <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+                  <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                   <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                  </rowConstraints>
                <children>
@@ -39,46 +48,52 @@
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin></Label>
-                     <ComboBox fx:id="theme" prefHeight="27.0" prefWidth="150.0" styleClass="default-combo-box" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                     <ComboBox fx:id="theme" prefHeight="27.0" prefWidth="285.0" promptText="Select Theme" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                      <Label styleClass="default-label" text="Auto-Save:" GridPane.rowIndex="3">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin></Label>
                      <CheckBox fx:id="autoSave" mnemonicParsing="false" prefHeight="18.0" prefWidth="19.0" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="3" />
       
-                        <Label style="-fx-font-size: 30px; -fx-font-family: sans-serif;" styleClass="default-label" text="Editor" GridPane.rowIndex="4" />
-                  <Label styleClass="default-label" text="Draw From Top:" GridPane.rowIndex="5">
+                        <Label style="-fx-font-size: 30px; -fx-font-family: sans-serif;" styleClass="default-label" text="Editor" GridPane.rowIndex="5" />
+                  <Label styleClass="default-label" text="Draw From Top:" GridPane.rowIndex="6">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin></Label>
-                  <CheckBox fx:id="editorDrawFromTop" mnemonicParsing="false" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                     <Label styleClass="default-label" text="Pan Multiplier:" GridPane.rowIndex="6">
+                  <CheckBox fx:id="editorDrawFromTop" mnemonicParsing="false" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                     <Label styleClass="default-label" text="Pan Multiplier:" GridPane.rowIndex="7">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin></Label>
-                     <TextField fx:id="panMultiplier" prefHeight="27.0" prefWidth="57.0" promptText="1.0" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                  <Label styleClass="default-label" text="Editor Background Color:" GridPane.rowIndex="8">
+                     <TextField fx:id="panMultiplier" prefHeight="27.0" prefWidth="57.0" promptText="1.0" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                  <Label styleClass="default-label" text="Editor Background Color:" GridPane.rowIndex="9">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin></Label>
-                  <TextField fx:id="editorBGColor" prefHeight="27.0" prefWidth="63.0" promptText="35406c" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-                  <Label styleClass="default-label" text="Outline Color:" GridPane.rowIndex="9">
+                  <TextField fx:id="editorBGColor" prefHeight="27.0" prefWidth="63.0" promptText="35406c" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+                  <Label styleClass="default-label" text="Outline Color:" GridPane.rowIndex="10">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin></Label>
-                  <TextField fx:id="editorOutlineColor" prefHeight="27.0" prefWidth="63.0" promptText="ff0000" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="9" />
-                  <Label styleClass="default-label" text="Show Guide Lines:" GridPane.rowIndex="11">
+                  <TextField fx:id="editorOutlineColor" prefHeight="27.0" prefWidth="63.0" promptText="ff0000" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+                  <Label styleClass="default-label" text="Show Guide Lines:" GridPane.rowIndex="12">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin>
                   </Label>
-                  <CheckBox fx:id="editorShowGuideLines" mnemonicParsing="false" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="11" />
-                  <Label prefHeight="21.0" prefWidth="195.0" styleClass="default-label" text="Guide Line Distance:" GridPane.rowIndex="12">
+                  <CheckBox fx:id="editorShowGuideLines" mnemonicParsing="false" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="12" />
+                  <Label prefHeight="21.0" prefWidth="195.0" styleClass="default-label" text="Guide Line Distance:" GridPane.rowIndex="13">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin>
                   </Label>
-                  <TextField fx:id="editorGuideLineDist" prefHeight="27.0" prefWidth="57.0" promptText="10" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="12" />
+                  <TextField fx:id="editorGuideLineDist" prefHeight="27.0" prefWidth="57.0" promptText="10" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="13" />
+                  <Label styleClass="default-label" text="JDK:" GridPane.rowIndex="4">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <ComboBox fx:id="jdk" prefHeight="27.0" prefWidth="285.0" promptText="Select JDK" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                </children>
                <padding>
                   <Insets left="10.0" top="10.0" />
