--- a/src/main/resources/fxml/newProject.fxml
+++ b/src/main/resources/fxml/newProject.fxml
@@ -1,19 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
 <!--
   ~ Copyright © 2020 Harmony Engines.
   ~ All rights reserved.
   -->
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.harmony.engine.utils.GlobalPrefController"
-            prefHeight="600.0" prefWidth="800.0">
-
+<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="anchor-section" stylesheets="@../css/harmony.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.harmony.engine.utils.NewProjectUtils">
+   <children>
+      <GridPane layoutX="14.0" layoutY="14.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+          <columnConstraints>
+              <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="256.0" />
+              <ColumnConstraints hgrow="SOMETIMES" maxWidth="245.0" minWidth="10.0" prefWidth="245.0" />
+              <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="95.0" />
+              <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="100.0" />
+              <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="100.0" />
+              <ColumnConstraints />
+          </columnConstraints>
+          <rowConstraints>
+              <RowConstraints />
+              <RowConstraints maxHeight="65.0" minHeight="65.0" prefHeight="65.0" vgrow="NEVER" />
+              <RowConstraints maxHeight="25.0" minHeight="25.0" prefHeight="25.0" vgrow="NEVER" />
+              <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+              <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+              <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+              <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+              <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+              <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+              <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+              <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+              <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+              <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+              <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+            <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+            <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+          </rowConstraints>
+         <children>
+            <Label fx:id="projectNameLabel" style="-fx-font-size: 30px;" styleClass="default-label" text="New Project" GridPane.rowIndex="1">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <padding>
+                  <Insets left="20.0" top="20.0" />
+               </padding></Label>
+            <Label styleClass="default-label" text="Project Name:" GridPane.rowIndex="3">
+               <padding>
+                  <Insets left="25.0" />
+               </padding>
+            </Label>
+            <TextField fx:id="projectName" promptText="New Project" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label styleClass="default-label" text="Version ID:" GridPane.rowIndex="4">
+               <padding>
+                  <Insets left="25.0" />
+               </padding>
+            </Label>
+            <TextField fx:id="version" promptText="Eg. 2.4.6" styleClass="default-text-field" text="1.0.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label styleClass="default-label" text="Include Demo Resources:" GridPane.rowIndex="6">
+               <padding>
+                  <Insets left="25.0" />
+               </padding>
+            </Label>
+            <CheckBox mnemonicParsing="false" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+         </children>
+      </GridPane>
+      <Button mnemonicParsing="false" styleClass="default-choose-button" text="Create" AnchorPane.bottomAnchor="12.0" AnchorPane.rightAnchor="12.0" />
+      <Button mnemonicParsing="false" styleClass="default-button" text="Cancel" AnchorPane.bottomAnchor="12.0" AnchorPane.rightAnchor="85.0" />
+   </children>
 </AnchorPane>
